--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,118 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Hello World
-    </h1>
-    <img src="/assets/images/cat.jpeg" alt="" width="300">
-
-
-    <script src="/scripts.js"></script>
+    <form class="form">
+        <div class="form__row form__row--2">
+            <div>
+                <label for="yourName" class="label">Name</label>
+                <input
+                        type="text"
+                        class="input"
+                        id="yourName"
+                        placeholder="Your Name"
+                />
+            </div>
+            <div>
+                <label for="yourEmail" class="label">Email</label>
+                <input
+                        type="email"
+                        class="input"
+                        id="yourEmail"
+                        placeholder="Your Email"
+                />
+            </div>
+        </div>
+        <div class="form__row">
+            <div>
+                <label for="cardDetails" class="label">Card Details</label>
+                <div class="input input--credit-card">
+                    <input
+                        type="text"
+                        class="input__blank"
+                        id="cardDetails"
+                        placeholder="XXXX-XXXX-XXXX-XXXX"
+                    />
+                    <input
+                            type="text"
+                            class="input__blank"
+                            placeholder="MM/YY"
+                    />
+                    <input
+                            type="text"
+                            class="input__blank"
+                            placeholder="CVC"
+                    />
+                </div>
+            </div>
+        </div>
+        <div class="form__row form__row--3">
+            <div>
+                <label for="streetNumber" class="label">Street Number</label>
+                <input
+                        type="number"
+                        class="input"
+                        id="streetNumber"
+                        placeholder="Your Street Number"
+                />
+            </div>
+            <div>
+                <label for="yourCity" class="label">City</label>
+                <input
+                        type="text"
+                        class="input"
+                        id="yourCity"
+                        placeholder="Your City"
+                />
+            </div>
+            <div>
+                <label for="yourCountry" class="label">Country</label>
+                <input
+                        type="text"
+                        class="input"
+                        id="yourCountry"
+                        placeholder="Your Country"
+                />
+            </div>
+        </div>
+        <div class="form__row">
+            <div>
+                <label for="companyName" class="label">Company Name</label>
+                <input
+                        type="text"
+                        class="input"
+                        id="companyName"
+                        placeholder="Your Company Name"
+                />
+            </div>
+        </div>
+        <div class="form__row">
+            <div>
+                <label for="emailAddress" class="label">Email address</label>
+                <input
+                        type="email"
+                        class="input"
+                        id="emailAddress"
+                        placeholder="Your Company Email"
+                />
+            </div>
+        </div>
+        <div class="form__row">
+            <div class="subtotal-container">
+                <div class="form__summary">
+                    <span>Subtotal</span>
+                    <span>$190.00</span>
+                </div>
+                <div class="form__summary">
+                    <span>Discount</span>
+                    <span>-$65.00</span>
+                </div>
+                <div class="form__summary">
+                    <span>Subtotal</span>
+                    <span>$125.00</span>
+                </div>
+            </div>
+        </div>
+        <button class="form__btn">Send</button>
+    </form>
 </body>
 </html>
